--- a/style.css
+++ b/style.css
@@ -163,8 +163,8 @@
   background-color: rgba(255, 255, 255, 0.2);
   height: 842px;
   width: 270px;
-  margin: 15px;
   margin-top: 0;
+  padding: 20px;
 }
 .way-menu-products li {
   float: left;
@@ -336,3 +336,74 @@ background-color: rgba(255,255,255,0.2);
   margin-top: 15px;
   margin-bottom: 15px;
 }
+input[type="checkbox"]{
+  display: none;
+}
+label:before{
+  content: "";
+  display: block;
+  width: 10px;
+  height: 10px;
+  margin: 6.5px 0;
+  border: 1px solid white;
+  position: absolute;
+  
+}
+label{
+  font-size: 21px;
+  margin: 30px;
+  color: #ffffff
+  
+}
+input[type="checkbox"]:checked + label:before{
+  background-color: white;
+}
+.check-type, .check-color, .check-ram{
+  position: relative;
+  margin: 12px 0 ;
+}
+.c-filter>div{
+  margin-bottom: 65px;
+}
+.text{
+  font-size: 21px;
+  color: #ffffff;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.show{
+  font-size: 21px;
+  color: #ffffff;
+  text-align: center;
+  display: block;
+}
+.submint{
+  border: white 1px solid;
+  background-color: #2c71b8;
+  width: 210px;
+  height: 50px;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 21px;
+  margin: 30px 10px;
+}
+.submint:hover{
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+}
+footer{
+  height: 100px;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+.footer{
+  font-size: 21px;
+  color: #2c71b8;
+  width: 20%;
+  margin: 0 auto;
+  padding: 40px;
+
+}
+  
+
