--- a/style.css
+++ b/style.css
@@ -155,6 +155,19 @@
     background-repeat: no-repeat;
     background-position: 110px 13px;
   }
+.box-bascket{
+position: relative;
+}
+.cart{
+  background-color: #2c71b8;
+  border-radius: 50%;
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  bottom: 31px;
+  left: -8px;
+}
+
   .turnabout {
     height: 400px;
     background-color: rgba(0, 0, 0, 0.2);
@@ -252,7 +265,7 @@
   background-color: transparent;
   border: #2c71b8 solid 1px;
 }
-.like:hover {
+.like:hover, .likes {
   background-color: #2c71b8;
   background-image: url("images/icon (7).png");
   background-repeat: no-repeat;
@@ -404,6 +417,11 @@ footer{
   margin: 0 auto;
   padding: 40px;
 
+}
+.product-count{
+  text-align: center;
+  margin: 0;
+  color: #ffffff;
 }
   
 
