--- a/style.css
+++ b/style.css
@@ -423,5 +423,46 @@ footer{
   margin: 0;
   color: #ffffff;
 }
-  
+.modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  z-index: 100;
+  display: none;
 
+}
+.modal-block{
+  width: 300px;
+  height: 200px;
+  margin: 80px auto;
+  border: 1px solid grey;
+  background-color: white;
+  padding: 8px;
+}
+.modal-block form{
+  color: black;
+}
+.form-field{
+  margin: 10px 0;
+}
+.form-field input{
+  width: 100%;
+  height: 30px;
+  padding: 5px;
+}
+.btn-close{
+  float: right;
+  cursor: pointer;
+}
+.modal-block h3{
+  padding-top: 15px;
+}
+.hide{
+  display: none;
+}
+.show{
+  display: block;
+}
